# Hermes

./: .dockerignore  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  debug_chat.py  debug_chat2.py  debug_chat3.py  fly.backend.toml  fly.frontend.toml  index.html  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  sync_media.cjs  vite.config.js
.github/: dependabot.yml
datasets/: books_catalog.csv  dataset_snapshot.json  music_catalog.csv
docs/: architecture.md  claims_log.md  deployment_profiles.yaml  experiment_manifest_template.yaml  governance.md  ingestion_manifest_template.json  migration_plan.md  operations.md  release_package.md  release_roadmap.md  reproducibility.md  research_program.md  risk_register.md  source_register.md  technical_report.md
evidence/: claims_log.json  dataset_sources.json  source_register.json
k8s/: ranking.yaml  retrieval.yaml
media/: FF1.webm
public/: robots.txt  sitemap.xml  sw.js
scripts/: build_seed_catalogs.py  build_vector_index.py  dataset_acquire.py  execute_data_pipeline.py  generate_benchmarks.py  profile_matrix.py  publish_artifacts.py  train_champion_models.py  train_embeddings.py  train_ranking_model.py  train_retrieval.py
src/: App.css  App.jsx  app.py  app_generative.py  app_ranking.py  app_retrieval.py  config.py  index.css
tests/: conftest.py  test_api_security_and_explanations.py  test_cache_manager.py  test_catalog_repository_snapshot.py  test_cold_start.py  test_conversational_explanation_service.py  test_data_quality_drift.py  test_dataset_registry.py  (+28 more)
(+100 files in other folders)
