[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-engine"
version = "1.0.0"
description = "Universal Multimodal Recommendation and Ranking Intelligence Engine"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Devendra Ghori"}
]
keywords = ["recommendation", "ranking", "multimodal", "retrieval", "deep-learning"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Developers",
]
dependencies = [
    "Flask>=3.1.3",
    "numpy>=2.4.4",
    "pandas>=3.0.3",
    "torch>=2.11.0",
    "transformers>=5.8.1",
    "sentence-transformers>=5.5.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "jsonschema>=4.26.0",
    "pydantic>=2.13.4",
    "Pillow>=12.2.0",
    "opencv-python-headless>=4.13.0.92",
    "beautifulsoup4>=4.14.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
